# moveit2

install/: local_setup.sh  setup.sh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.9
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.9
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.9  libmoveit_butterworth_filter.so.2.5.9  libmoveit_collision_detection.so.2.5.9  libmoveit_collision_detection_bullet.so.2.5.9  libmoveit_collision_detection_fcl.so.2.5.9  libmoveit_collision_distance_field.so.2.5.9  libmoveit_constraint_samplers.so.2.5.9  libmoveit_distance_field.so.2.5.9  libmoveit_dynamics_solver.so.2.5.9  libmoveit_exceptions.so.2.5.9  libmoveit_kinematic_constraints.so.2.5.9  libmoveit_kinematics_metrics.so.2.5.9  libmoveit_planning_interface.so.2.5.9  libmoveit_planning_request_adapter.so.2.5.9  libmoveit_planning_scene.so.2.5.9  libmoveit_robot_model.so.2.5.9  libmoveit_robot_state.so.2.5.9  libmoveit_robot_trajectory.so.2.5.9  libmoveit_test_utils.so.2.5.9  libmoveit_trajectory_processing.so.2.5.9  libmoveit_transforms.so.2.5.9
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.9  libmotion_planning_pipeline_plugin.so.2.5.9  libmoveit_hybrid_planning_manager.so.2.5.9  (+5 more)
log/: latest_build
src/panda_commander/: package.xml  setup.cfg  setup.py
src/panda_description/: CMakeLists.txt
src/panda_gazebo/: CMakeLists.txt
src/panda_moveit_config/: .setup_assistant  CMakeLists.txt
src/use_moveit/: CMakeLists.txt
src/use_moveit/src/: get_pose.cpp  use_moveit.cpp
(+290 files in other folders)
